--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#06121e" />
 
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
@@ -15,8 +17,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <title>DEv - Barber - shope</title>
+
+  
 </head>
 
 <body>
@@ -25,7 +29,7 @@
     <!-- Header  -->
     <header>
       <nav class="header-content container">
-        <div class="header-icons">
+        <div class="header-icons"  data-aos="fade-down">
           <a href="#">
             <i class="fa-brands fa-instagram fa-2x"></i>
           </a>
@@ -37,11 +41,11 @@
           </a>
         </div>
 
-        <div class="header-logo">
-          <img src="./assets/logo.svg" alt="logo da barbearia">
+        <div class="header-logo" data-aos="fade-up" data-aos-delay="300">
+          <img src="./assets/logo.svg" alt="logo da barbearia" data-aos="flip-up" data-aos-delay="300" data-aos-duration="1500">
         </div>
 
-        <div >
+        <div data-aos="fade-dowm">
           <a class="header-btn" href="#">Agendar Horario</a>
         </div>
 
@@ -49,19 +53,19 @@
     </header>
 
     <!-- Main Content -->
-    <main class="hero container">
+    <main class="hero container" data-aos="fade-up" data-aos-delay="300">
       <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE.</h1>
       <p>Horário de funcionamento: 09:00 ás 19:00</p>
-      <a href="#" class="btn-contato" target="_blank">Agendar horario</a>
+      <a href="https://api.whatsapp.com/send/?phone=11970270208&text=Quero%20fazer%20um%20agendamento%20hoje%20?" class="btn-contato" target="_blank">Agendar horario</a>
     </main>
   </div>
-
+    <!-- Services -->
   <section class="about">
     <div class="about-content container">
-      <div>
+      <div data-aos="zoom-in" data-aos-delay="100">
         <img src="assets/images.svg" alt="image da babearia"> 
       </div> 
-      <div class="about-descriptions">
+      <div class="about-descriptions" data-aos="zoom-ou-left" data-aos-delay="400">
         <h2>SOBRE</h2>
         <p>Lorem ipsum dolor sit amet consectetur. Ornare eget pellentesque proin risus. Orci proin morbi vestibulum convallis leo vestibulum mus. Non duis augue eros mattis a quis sem sodales.</p>
         <p>Horário de funcionamento: <strong>09:00</strong> ás <strong>19:00</strong></p>
@@ -70,6 +74,88 @@
 
   </section>
 
+
+  <!-- Services -->
+  <section  class="services">
+
+    <div class="services-content container">
+      <h2>Servicos</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente doloremque, assumenda ipsum et accusantium labore deleniti dolor saepe aperiam, ea ut molestias ratione quae dolorem inventore, odio consequuntur. Nesciunt, maxime.</p>
+    </div>
+
+    <section class="haircuts">
+
+      <div class="haircut" data-aos="fade-up" data-aos-delay="150">
+        <img src="./assets/corte1.png" alt="Corte normal">
+        <div class="haircut-info">
+          <strong>Corte normal</strong>
+          <button>R$ 45.00</button>
+        </div>
+      </div>
+
+      <div class="haircut" data-aos="fade-up" data-aos-delay="250">
+        <img src="./assets/corte2.png" alt="Corte normal">
+        <div class="haircut-info">
+          <strong>Barba completa</strong>
+          <button>R$ 30.00</button>
+        </div>
+      </div>
+
+      <div class="haircut" data-aos="fade-up" data-aos-delay="400">
+        <img src="./assets/corte3.png" alt="Corte normal">
+        <div class="haircut-info">
+          <strong>Corte e barba</strong>
+          <button>R$ 70.00</button>
+        </div>
+      </div>
+
+
+    </section>
+
+  </section>
+
+  <div class="services">
+      <h2>Venha conhecer </h2>
+  </div>
+  <iframe 
+  width="100%"
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d420.7801892160713!2d-46.733281761419015!3d-23.642171666552944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce516b08f5ffad%3A0x7a544c4659bf77dc!2sMen&#39;s%20Barber%20Shop!5e0!3m2!1spt-BR!2sbr!4v1713406110301!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+
+  <footer class="footer">
+    <div class="footer-icons">
+      <a href="#">
+        <i class="fa-brands fa-instagram fa-2x"></i>
+      </a>
+      <a href="#">
+        <i class="fa-brands fa-facebook fa-2x"></i>
+      </a>
+      <a href="#">
+        <i class="fa-brands fa-twitter fa-2x"></i>
+      </a>
+    </div>
+    <div class="">
+      <img src="./assets/logo.svg" alt="logo-white">
+    </div>
+    <p>&copy;| Copyright | 2024 | Dev Barbe </p>
+
+  </footer>
+
+
+  <a href="https://api.whatsapp.com/send/
+  ?phone=11970270208&
+  text=Quero%20fazer%20um%20agendamento%20hoje%20?" 
+  class="btn-whtapp" 
+  target="_blank"
+  data-aos="zoom-in-up"
+  data-aos-delay="400"
+  >
+    <img src="assets/whatssapp.svg" alt="button whats">
+    <span class="tooltip-text">Agende seu Horario !</span>
+  </a>
+
+  <script src="script.js"></script>
+  
 </body>
 
 </html>
